link to github repo

--- a/vorlage.html
+++ b/vorlage.html
@@ -34,6 +34,12 @@ More on PI4: <a href="http://www.rudius.net/oz2m/ngnb/pi4.htm">www.rudius.net/oz
     </table>
 </form>
 
+<br>
+<br>
+Get the source code of this app on GitHub: <a href="https://github.com/dominikauras/pi4wfgen">github.com/dominikauras/pi4wfgen</a>
+<br>
+<br>
+
 {% if pi4Message %}
 
 <br>
