fix: remove safe filter from pi4Message in vorlage.html

--- a/vorlage.html
+++ b/vorlage.html
@@ -55,7 +55,7 @@ Get the source code of this app on GitHub: <a href="https://github.com/dominikau
     <td><b>Source encoding</b></td>
   </tr>
   <tr>
-    <td>{{ pi4Message|safe }}&nbsp;&nbsp;</td>
+    <td>{{ pi4Message }}&nbsp;&nbsp;</td>
     <td>{{ EightCharMsg|replace(' ','<space>') }}&nbsp;&nbsp;</td>
     <td>{{ SourceEncoding }}</td>
   </tr>
